fixed label and input alignment + temp css updates

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -1,13 +1,13 @@
 body {
-  background-color: grey;
+  background-color: #181818;
 }
 
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: bisque;
-  border-radius: 50px;
+  background-color: #333333;
+  border-radius: 1rem;
   height: 300px;
   width: 300px;
   margin: 0 auto;
@@ -15,4 +15,17 @@ form {
 
 fieldset {
   border: 0;
+}
+
+.color-option .title-input {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+
+h1,
+h2,
+label,
+legend {
+  color: #e4e4e4;
 }
